--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hospitalmanagement">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".VolleySingleton"
         android:allowBackup="true"
@@ -26,7 +30,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityMyOrders"></activity>
+        <activity
+            android:name=".ActivityMyOrders"
+            android:label="My Orders"
+            android:launchMode="singleTop"
+            android:parentActivityName=".ActivityHome"
+            android:theme="@style/AppTheme.SlidrActivityTheme">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityHome" />
+        </activity>
+        <activity
+            android:name=".ActivityDoctorMgt"
+            android:label="Manage Doctors"
+            android:parentActivityName=".ActivityHome"
+            android:theme="@style/AppTheme.SlidrActivityTheme">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityHome" />
+        </activity>
     </application>
 
 </manifest>
