--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:name=".VolleySingleton"
         android:allowBackup="true"
         android:fullBackupContent="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_hospital_management"
+        android:roundIcon="@mipmap/ic_launcher_hospital_management_round"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -45,6 +45,17 @@
         <activity
             android:name=".ActivityDoctorMgt"
             android:label="Manage Doctors"
+            android:parentActivityName=".ActivityHome"
+            android:theme="@style/AppTheme.SlidrActivityTheme">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityHome" />
+        </activity>
+        <activity
+            android:name=".ActivityMyProfile"
+            android:label="My Profile"
             android:parentActivityName=".ActivityHome"
             android:theme="@style/AppTheme.SlidrActivityTheme">
 
